--- a/package.json
+++ b/package.json
@@ -11,10 +11,11 @@
     "start": "vite"
   },
   "devDependencies": {
+    "@tanstack/router-plugin": "^1.112.13",
     "@types/react": "^19.0.8",
     "@types/react-dom": "^19.0.3",
-    "@tanstack/router-plugin": "^1.112.13",
     "@vitejs/plugin-react": "^4.3.2",
+    "prettier": "^3.5.3",
     "vite": "^6.0.3"
   },
   "dependencies": {
