--- a/package.json
+++ b/package.json
@@ -8,14 +8,19 @@
     "dev": "vite --port=3001",
     "build": "vite build",
     "serve": "vite preview",
-    "start": "vite"
+    "start": "vite",
+    "cy:open": "cypress open",
+    "e2e": "start-test start http://localhost:5173 cy:open"
   },
   "devDependencies": {
     "@tanstack/router-plugin": "^1.112.13",
     "@types/react": "^19.0.8",
     "@types/react-dom": "^19.0.3",
     "@vitejs/plugin-react": "^4.3.2",
+    "cypress": "^14.2.0",
     "prettier": "^3.5.3",
+    "start-server-and-test": "^2.0.11",
+    "typescript": "^5.8.2",
     "vite": "^6.0.3"
   },
   "dependencies": {
