--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@types/react-dom": "^19.0.3",
     "@vitejs/plugin-react": "^4.3.2",
     "cypress": "^14.2.0",
+    "cypress-map": "^1.45.1",
     "prettier": "^3.5.3",
     "start-server-and-test": "^2.0.11",
     "typescript": "^5.8.2",
